Solve Rotate Array Matrix

--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha **/*.test.js"
+    "test": "mocha **/*.test.js --timeout 300000"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "mocha": "^9.1.3"
+  },
+  "dependencies": {
+    "chai": "^4.3.4"
   }
 }
